# citeguard

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: update-diagram.yml
app/: config.py  main.py
app/agents/: math_teacher.py  reference_extractor.py  template.py
app/agents/llm/: llm_executor.py  llm_factory.py
app/agents/object/: aggent_factory.py
app/api/: dependencies.py
app/api/middleware/: admin_protection.py  killswitch.py  logging.py  rate_limit.py
app/api/routes/: admin.py  health.py  verify.py
app/core/: config.py  logging.py  monitoring.py
app/db/: database.py  tokens.py  usage.py
app/graph/: citeguard_graph.py  routes.py  state.py
app/graph/nodes/: ai_nodes.py  extraction_nodes.py  input_nodes.py  merge_and_score_nodes.py  verification_nodes.py
app/graph/object/: graph_builder.py
app/models/: constants.py  schemas.py  token.py
app/services/: citeguard_service.py
app/utils/agents/: prompt_loader.py
app/utils/graph/: build_report.py  mermaid_renderer.py
app/utils/misc/: timing.py
config/: pipeline.yml
docker/searxng/: README.md  docker-compose.yml  settings.yml  settings.yml.example
scripts/: build_dblp_index.py  manage.py
tests/: conftest.py  test_admin_protection.py  test_auth.py  test_config.py  test_killswitch.py  test_logging.py  test_merge_and_score.py  test_rate_limit.py  test_reference_extraction.py  test_reference_extraction_2.py  test_routes.py  test_tokens.py  test_usage.py
tests/agents/: test_math_teacher.ipynb
tests/assets/: sample_references.md  sample_references_2.md
(+30 files in other folders)
