[project]
name = "citeguard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "async-typer>=0.1.10",
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.10.0",
    "fastapi>=0.128.0",
    "google-genai>=1.57.0",
    "groq<1.0.0",
    "inflect>=7.5.0",
    "instaloader>=4.15",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.6",
    "langfuse>=3.11.2",
    "langgraph>=1.0.5",
    "markitdown>=0.1.4",
    "mermaid-cli>=0.1.3",
    "omegaconf>=2.3.0",
    "openai>=2.14.0",
    "openinference-instrumentation-groq>=0.1.12",
    "opentelemetry-instrumentation-openai>=0.51.0",
    "pillow>=12.1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-box>=7.3.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "qdrant-client>=1.16.2",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.40.0",
    "aiosqlite>=0.20.0",
    "click>=8.1.0",
    ]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]

[project.scripts]
citeguard-admin = "scripts.manage:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "scripts"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100